[package]
name = "pallet-did"
version = '4.0.0-dev'
description = 'Substrate Decentralized ID Pallet'
edition = '2021'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
frame-benchmarking = "9.0.0"
frame-support = "9.0.0"
frame-system = "9.0.0"
pallet-timestamp = "9.0.0"
sp-core = "10.0.0"
sp-io = "11.0.0"
sp-runtime = "11.0.0"
sp-std = "6.0.0"

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	"frame-benchmarking/std",
	'frame-support/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'pallet-timestamp/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
